Add i18n support and initial HTTP handlers
- Implemented `translations.go` in `internal/web/i18n/` for managing multilingual support.
- Added HTTP handlers in `internal/web/handlers/` for rendering key pages: dashboard, chat, tools, and development assistant.
- Introduced language and theme preference handling via cookies and headers.
- Created placeholder functions for API endpoints and user preference updates.

--- a/configs/development.yaml
+++ b/configs/development.yaml
@@ -4,7 +4,7 @@ log_level: debug
 log_format: text
 
 database:
-  url: "postgres://goassistant:goassistant@localhost:5432/goassistant_dev?sslmode=disable"
+  url: "postgres://koopa@localhost:5432/goassistant?sslmode=disable"
   max_connections: 10
   min_connections: 2
   max_idle_time: "10m"
@@ -32,11 +32,13 @@ cli:
 ai:
   default_provider: "claude"
   claude:
+    api_key: "${CLAUDE_API_KEY}"  # Will be overridden by environment variable
     model: "claude-3-sonnet-20240229"
     max_tokens: 4096
     temperature: 0.7
     base_url: "https://api.anthropic.com"
   gemini:
+    api_key: "${GEMINI_API_KEY}"  # Will be overridden by environment variable
     model: "gemini-pro"
     max_tokens: 4096
     temperature: 0.7
