--- a/.env.example
+++ b/.env.example
@@ -7,7 +7,7 @@ LOG_LEVEL=info
 LOG_FORMAT=json
 
 # Database Configuration
-DATABASE_URL=postgres://user:password@localhost:5432/goassistant?sslmode=disable
+DATABASE_URL=postgres://koopa@localhost:5432/goassistant?sslmode=disable
 DB_MAX_CONNECTIONS=25
 DB_MIN_CONNECTIONS=5
 DB_MAX_IDLE_TIME=15m
