Introduce `ProfileManager` for observability and add detailed documentation
- Added `ProfileManager` in `internal/observability/` for managing performance profiling (CPU, memory, goroutines, and traces) with periodic and on-demand collection.
- Implemented logging, runtime statistics (`GetProfileStats`), and error handling for more robust production usage.
- Included convenience functions for profiling management (`EnableProfiling`, `DisableProfiling`, etc.).
- Added comprehensive module documentation in `docs/README.md`, `internal/README.md`, and `test/README.md`, providing structural insights and development/testing workflows.
- Introduced end-to-end test suite for validating core user workflows and server operations (`test/e2e/assistant_e2e_test.go`).

--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -1,30 +1,28 @@
-name: Release
+name: Release Pipeline
 
 on:
   push:
     tags:
       - 'v*'
+  release:
+    types: [published]
 
 env:
-  GO_VERSION: "1.24"
-  NODE_VERSION: "20"
+  GO_VERSION: '1.24'
+  REGISTRY: ghcr.io
+  IMAGE_NAME: ${{ github.repository }}
 
 jobs:
-  release:
-    name: Create Release
+  # Pre-release validation
+  pre-release-validation:
+    name: Pre-Release Validation
     runs-on: ubuntu-latest
-    permissions:
-      contents: write
-      packages: write
-
     steps:
       - name: Checkout code
         uses: actions/checkout@v4
-        with:
-          fetch-depth: 0
 
       - name: Set up Go
-        uses: actions/setup-go@v4
+        uses: actions/setup-go@v5
         with:
           go-version: ${{ env.GO_VERSION }}
 
