--- a/.github/workflows/comprehensive-testing.yml
+++ b/.github/workflows/comprehensive-testing.yml
@@ -65,15 +65,15 @@ jobs:
         run: go vet ./...
 
       - name: Static analysis
-        run: staticcheck ./...
+        run: staticcheck -checks=all,-ST1000,-ST1020,-ST1021 ./...
 
       - name: Security scan
         run: gosec -quiet ./...
 
-      - name: Lint
+      - name: Install and run golangci-lint
         run: |
-          go install golang.org/x/lint/golint@latest
-          golint -set_exit_status ./...
+          curl -sSfL https://raw.githubusercontent.com/golangci/golangci-lint/master/install.sh | sh -s -- -b $(go env GOPATH)/bin v1.61.0
+          $(go env GOPATH)/bin/golangci-lint run --timeout=5m --disable=typecheck
 
   # Phase 2: Unit Tests
   unit-tests:
@@ -337,14 +337,14 @@ jobs:
           go-version: ${{ env.GO_VERSION }}
 
       - name: Run Gosec Security Scanner
-        uses: securecodewarrior/github-action-gosec@master
-        with:
-          args: '-fmt sarif -out gosec.sarif ./...'
+        run: |
+          mkdir -p reports
+          gosec -fmt sarif -out reports/gosec.sarif ./...
 
       - name: Upload SARIF file
         uses: github/codeql-action/upload-sarif@v3
         with:
-          sarif_file: gosec.sarif
+          sarif_file: reports/gosec.sarif
 
   # Phase 7: Combined Coverage Report
   combined-coverage:
