--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -30,12 +30,12 @@ jobs:
           restore-keys: |
             ${{ runner.os }}-go-
 
-      - name: Install dependencies
-        run: go mod download
-
-      - name: Install golangci-lint
+      - name: Install dependencies and tools
         run: |
-          curl -sSfL https://raw.githubusercontent.com/golangci/golangci-lint/master/install.sh | sh -s -- -b $(go env GOPATH)/bin v1.61.0
+          go mod download
+          go mod tidy
+          # Use latest version that supports Go 1.24
+          curl -sSfL https://raw.githubusercontent.com/golangci/golangci-lint/master/install.sh | sh -s -- -b $(go env GOPATH)/bin latest
           
       - name: Run golangci-lint (with typecheck disabled)
         run: |
@@ -138,7 +138,9 @@ jobs:
             ${{ runner.os }}-go-
 
       - name: Install dependencies
-        run: go mod download
+        run: |
+          go mod download
+          go mod tidy
 
       # Web assets not needed for this project
 
@@ -173,7 +175,9 @@ jobs:
           go-version: ${{ env.GO_VERSION }}
 
       - name: Install gosec
-        run: go install github.com/securecodewarrior/gosec/v2/cmd/gosec@latest
+        run: |
+          # Install specific version to avoid module resolution issues
+          curl -sfL https://raw.githubusercontent.com/securecodewarrior/gosec/master/install.sh | sh -s -- -b $(go env GOPATH)/bin v2.21.4
 
       - name: Run Gosec Security Scanner
         run: |
